--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,11 +15,11 @@
         <form action="/session" method="post">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <div class="mb-6">
-            <label for="email" class="text-indigo-700">Email:</label>
+            <label for="email" class="text-indigo-700 text-lg font-semibold">Email:</label>
             <input type="email" name="email" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
           </div>
           <div class="mb-6">
-            <label for="password" class="text-indigo-700">Password:</label>
+            <label for="password" class="text-indigo-700 text-lg font-semibold">Password:</label>
             <input type="password" name="password" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
           </div>
           <div class="flex justify-center">
