--- a/views/cancelsession.ejs
+++ b/views/cancelsession.ejs
@@ -8,20 +8,20 @@
     <link href="/css/styles.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="bg-gray-100">
     <%- include("header.ejs") %> 
     <div class="mt-4">
       <a href="/home" class="underline text-indigo-700 text-xl mr-1 ml-5">Home</a>
       <a href="/sport_main/<%= sport_id %>" class="underline text-indigo-700 text-xl"><%= sport_name %></a>
     </div>
     <div class="flex items-center justify-center mt-40">
-      <div class="bg-indigo-100 rounded-lg shadow-lg p-10 mx-auto">
+      <div class="bg-white rounded-lg shadow-lg p-9 mx-auto">
         <h2 class="text-3xl font-bold text-center text-indigo-700 mb-6">Cancel Session</h2>
         <form action="/cancelsession/<%= session_id %>/<%= sport_id %>" method="post">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <div class="mb-6">
-            <label for="reason" class="text-indigo-700 mb-4">Why do you want to cancel this sesion ?</label>
-            <input type="text" name="reason" class="bg-gray-100 text-gray-900 rounded p-2 w-full mt-4">
+            <label for="reason" class="text-indigo-700 mb-4 text-lg">Why do you want to cancel this sesion ?</label>
+            <input type="text" name="reason" class="bg-gray-100 text-gray-900 rounded p-2 w-full mt-4" placeholder="Enter Reason">
           </div>
           <div class="flex justify-center">
             <button type="submit" class="py-2 px-6 bg-indigo-700 text-white font-medium rounded hover:bg-indigo-800">Cancel</button>
