--- a/views/players.ejs
+++ b/views/players.ejs
@@ -1,7 +1,7 @@
 <div class="mt-6">
   <% for (var i = 0; i < session_players.length; i++) { %>
     <% var playerId = session_players[i].id; %>
-    <button class="w-40 bg-indigo-400 text-indigo-100 font-bold rounded-lg py-2 px-4 mb-4 mr-4">
+    <button class="w-40 bg-indigo-400 text-white font-bold rounded-lg py-2 px-4 mb-4 mr-4">
       <span class="flex items-center justify-between">
         <span class="mr-2"><%= session_players[i].firstName %></span>
         
