--- a/views/previoussession.ejs
+++ b/views/previoussession.ejs
@@ -7,18 +7,18 @@
     <link href="/css/styles.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>  
-  <body>
+  <body class="bg-gray-100 font-sans">
     <%- include("header.ejs") %> 
-    <div class="grid grid-cols-7 gap-6 px-4">
+    <div class="grid grid-cols-7 gap-6 px-4 mt-4">
       <div class="col-start-1 col-span-2">
         <div class="mb-8 mt-4">
           <a href="/home" class="underline text-indigo-700 text-xl mr-2 ml-2">Home</a>
           <a href="/sport_main/<%= sport.id %>" class="underline text-indigo-700 text-xl"><%= sport.sport_name %></a>
         </div>
       </div>
-      <div class="col-start-3 col-span-3">
+      <div class="col-start-3 col-span-3 bg-white rounded-lg shadow-lg p-9">
         <div>
-          <h1 class="text-3xl mb-4 font-bold mt-6 text-indigo-700">Previous <%= sport.sport_name %> Sessions</h1>
+          <h1 class="text-3xl mb-4 font-bold text-indigo-700">Previous <%= sport.sport_name %> Sessions</h1>
         </div>
         <% if(previoussessions.length < 1){ %>
           <p class="text-xl font-bold mt-2 mb-2">There are no previous sessions</p>
