--- a/views/report.ejs
+++ b/views/report.ejs
@@ -8,22 +8,22 @@
     <link href="./css/styles.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-indigo-200">
+  <body class="bg-gray-100">
     <%- include("header.ejs") %>
     <div class="grid grid-cols-7">
       <div class="mt-4 col-start-1">
         <a href="/home" class="underline text-indigo-700 text-xl mr-2 ml-5">Home</a>
       </div>
-      <div class="col-start-3 col-span-3 mt-4 ml-20 mr-20">
+      <div class="col-start-3 col-span-3 mt-4 ml-20 mr-20 bg-white p-6">
         <h1 class="font-bold text-3xl text-indigo-700 ml-4">Reports</h1>
         <form action="/report" method="post" class="rounded p-4">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
           <div class="mb-4">
-            <label for="startDate" class="text-indigo-700">Enter Start Date</label>
+            <label for="startDate" class="text-indigo-700 text-lg font-semibold">Enter Start Date</label>
             <input type="datetime-local" name="startDate" class="bg-gray-100 text-gray-900 rounded p-2 w-full mx-auto" />
           </div>
           <div class="mb-4">
-            <label for="endDate" class="text-indigo-700">Enter End Date</label>
+            <label for="endDate" class="text-indigo-700 text-lg font-semibold">Enter End Date</label>
             <input type="datetime-local" name="endDate" class="bg-gray-100 text-gray-900 rounded p-2 w-full mx-auto" />
           </div>
           <div class="flex justify-center">
@@ -32,7 +32,7 @@
             </button>
           </div>
         </form>
-        <div class="mt-4 text-red-600">
+        <div class="mt-1 text-red-600">
           <% if(messages && messages.error && messages.error.length > 0)  { %>
             <% for(var i=0; i<messages.error.length; i++) { %>
                     <li> <%= messages.error[i] %></li>
@@ -43,7 +43,7 @@
 
       <% if (flag) { %>
         <div class="col-start-3 col-span-3 mb-2">
-          <div class="bg-indigo-100 rounded p-4 mt-8">
+          <div class="bg-white rounded p-4 mt-8">
             <h1 class="text-2xl font-bold mb-4">Total Sessions Report</h1>
             <h2 class="text-lg font-semibold mb-2">Total number of sessions scheduled: <%= sessioncount + c_sessioncount %></h2>
             <h2 class="text-lg font-semibold mb-2">Ongoing sessions: <%= sessioncount %></h2>
@@ -53,7 +53,7 @@
           <%if (result.length > 0) { %>
             <div class=" rounded p-4 mt-8">
               <h1 class="text-2xl font-bold mb-4">Sessions by Sport</h1>
-              <table class="table-auto w-full bg-indigo-100 rounded-lg overflow-hidden">
+              <table class="table-auto w-full bg-white rounded-lg overflow-hidden">
                 <thead class="bg-indigo-700 text-indigo-100">
                   <tr>
                     <th class="px-4 py-2">Sport</th>
@@ -75,7 +75,7 @@
           <%if (sessions.length>0) { %>
             <div class="rounded p-4 mt-8">
               <h1 class="text-2xl font-bold mb-4">Sessions Report</h1>
-              <table class="table-auto w-full bg-indigo-100 rounded-lg overflow-hidden">
+              <table class="table-auto w-full bg-white rounded-lg overflow-hidden">
                 <thead class="bg-indigo-700 text-indigo-100">
                   <tr>
                     <th class="px-4 py-2">Sport</th>
