--- a/views/sessionslist.ejs
+++ b/views/sessionslist.ejs
@@ -1,6 +1,6 @@
-<div class="mt-5">
+<div class="mt-2">
     <% if (data && data.length > 0) { %>
-        <h1 class="text-2xl text-indigo-700 font-bold mb-4"><%= title %></h1>
+        <h1 class="mb-4 text-xl font-bold mb-2"><%= title %></h1>
         <div class="flex flex-wrap -mx-2">
             <% for (var i = 0; i < data.length; i++) { %>
                 <a href="/session_main/<%= data[i].id %>/<%= flag %>" class="flex flex-col justify-center items-center py-2 px-4 my-2 mx-2 bg-gray-200 rounded-lg">
