--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,23 +15,23 @@
         <form action="/users" method="post">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <div class="mb-6">
-            <label for="firstName" class="text-indigo-700">First Name:</label>
+            <label for="firstName" class="text-indigo-700 text-lg font-semibold">First Name:</label>
             <input type="text" name="firstName" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
           </div>
           <div class="mb-6">
-            <label for="lastName" class="text-indigo-700">Last Name:</label>
+            <label for="lastName" class="text-indigo-700 text-lg font-semibold">Last Name:</label>
             <input type="text" name="lastName" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
           </div>
           <div class="mb-6">
-            <label for="email" class="text-indigo-700">Email:</label>
+            <label for="email" class="text-indigo-700 text-lg font-semibold">Email:</label>
             <input type="email" name="email" class="required bg-gray-100 text-gray-900 rounded p-2 w-full">
           </div>
           <div class="mb-6">
-            <label for="password" class="text-indigo-700">Password:</label>
+            <label for="password" class="text-indigo-700 text-lg font-semibold">Password:</label>
             <input type="password" name="password" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
           </div>
           <div class="mb-12">
-            <label for="role" class="text-indigo-700">Role:</label>
+            <label for="role" class="text-indigo-700 text-lg font-semibold">Role:</label>
             <select name="role" id="role" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
               <option value="none" selected disabled hidden>Select an Option</option>
               <option value="Admin">Admin</option>
