--- a/views/sportsessions.ejs
+++ b/views/sportsessions.ejs
@@ -1,60 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name="csrf-token" content= "<%= csrfToken %>">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="/css/styles.css" rel="stylesheet" />
-  </head>
-  <body>
-    <%- include("header.ejs") %> 
-    <div style="display: flex;" class="mt-4">
-      <a href="/home" class="underline text-indigo-700 text-xl mr-2 ml-5">Home</a>
-      <a href="/sport_main/<%= current_sport_id %>" class="underline text-indigo-700 text-xl"><%= current_sport_name %></a>
-    </div>
-    <div class="flex items-center justify-center mb-10">
-      <div class="bg-indigo-100 rounded-lg shadow-lg p-10">
-        <h2 class="text-3xl font-bold text-center text-indigo-700 mb-6">Create new <%= current_sport_name %> session</h2>
-        <form action="/sportsession" method="post">
-          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-          <input type="hidden" name="name" value="<%= current_sport_name %>">
-          <div class="mb-6">
-            <label for="date" class="text-indigo-700">When will this sport session be held?</label>
-            <input type="datetime-local" name="date" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
-          </div>
-          <div class="mb-6">
-            <label for="address" class="text-indigo-700">Where will this session be played?</label>
-            <input type="text" name="address" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
-          </div>
-          <div class="mb-6">
-            <label for="players" class="text-indigo-700">Who all will be joining you in this session? <br> ( ctrl+click for multiselect )</label>
-            <select name="players" id="players" multiple class="border bg-gray-100 text-gray-900 rounded p-2 w-full">
-              <option value="" selected disabled hidden>Select players</option>
-              <% for (var i =0; i <data.length;  i++ ) { %>
-                          <option value="<%= data[i].id %>">
-                              <%= data[i].firstName %>
-                          </option>
-              <% } %>                        
-            </select>
-          </div>
-          <div class="mb-6">
-            <label for="count" class="text-indigo-700">How many more players do you need?</label>
-            <input type="number" min="0" name="count" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
-          </div>
-          <div class="flex justify-center">
-            <button type="submit" class="py-2 px-6 bg-indigo-700 text-white font-medium rounded hover:bg-indigo-800">Submit</button>
-          </div>
-        </form>
-        <div class="mt-4 text-red-600">
-          <% if(messages && messages.error && messages.error.length > 0)  { %>
-            <% for(var i=0; i<messages.error.length; i++) { %>
-                    <li> <%= messages.error[i] %></li>
-            <% } %>
-          <% } %>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="csrf-token" content="<%= csrfToken %>">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="/css/styles.css" rel="stylesheet">
+  <title>Create New Session</title>
+</head>
+<body class="bg-gray-100 font-sans">
+
+  <!-- Header -->
+  <%- include("header.ejs") %> 
+
+  <!-- Navigation -->
+  <div class="mt-4 mx-5">
+    <a href="/home" class="underline text-indigo-700 text-xl mr-5">Home</a>
+    <a href="/sport_main/<%= current_sport_id %>" class="underline text-indigo-700 text-xl"><%= current_sport_name %></a>
+  </div>
+
+  <!-- Main Content -->
+  <div class="flex items-center justify-center mb-2">
+    <div class="bg-white rounded-lg shadow-lg p-10 w-1/3">
+      <h2 class="text-3xl font-bold text-center text-indigo-700 mb-6">Create New <%= current_sport_name %> Session</h2>
+      <form action="/sportsession" method="post">
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+        <input type="hidden" name="name" value="<%= current_sport_name %>">
+        <div class="mb-6">
+          <label for="date" class="text-indigo-700">When will this sport session be held?</label>
+          <input type="datetime-local" name="date" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
         </div>
+        <div class="mb-6">
+          <label for="address" class="text-indigo-700">Where will this session be played?</label>
+          <input type="text" name="address" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
+        </div>
+        <div class="mb-6">
+          <label for="players" class="text-indigo-700">Who all will be joining you in this session? <br> (ctrl+click for multiselect)</label>
+          <select name="players" id="players" multiple class="border bg-gray-100 text-gray-900 rounded p-2 w-full">
+            <option value="" selected disabled hidden>Select players</option>
+            <% for (var i =0; i <data.length;  i++ ) { %>
+              <option value="<%= data[i].id %>">
+                <%= data[i].firstName %>
+              </option>
+            <% } %>                        
+          </select>
+        </div>
+        <div class="mb-6">
+          <label for="count" class="text-indigo-700">How many more players do you need?</label>
+          <input type="number" min="0" name="count" class="bg-gray-100 text-gray-900 rounded p-2 w-full">
+        </div>
+        <div class="flex justify-center">
+          <button type="submit" class="py-2 px-6 bg-indigo-700 text-white font-medium rounded hover:bg-indigo-800">Submit</button>
+        </div>
+      </form>
+      <div class="mt-4 text-red-600">
+        <% if(messages && messages.error && messages.error.length > 0)  { %>
+          <% for(var i=0; i<messages.error.length; i++) { %>
+            <li><%= messages.error[i] %></li>
+          <% } %>
+        <% } %>
       </div>
     </div>
-  </body>
+  </div>
+
+</body>
 </html>
